--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   nicotine:
-    image: hockeygoalie35/nicotine-novnc-rpi:latest
+    image: hockeygoalie35/nicotine-novnc-rpi:v1.0
     container_name: nicotine
     environment:
       - PUID=1000
