Change paths to match Setup in Read.ME

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,11 @@ services:
       - PGID=1000
       - TZ=America/Chicago
     volumes:
-      - /path/to/Nicotine/data:/data
-      - /path/to/downloads:/data/.local/share/nicotine/downloads
-      - /path/to/incomplete:/data/.local/share/nicotine/incomplete
-      - /path/to/received:/data/.local/share/nicotine/received
-      - /path/to/shares:/data/shares
+      - /home/pi/Appdata/nicotine/data:/data
+      - /home/pi/Appdata/nicotine/data:/data/.local/share/nicotine/downloads
+      - /home/pi/Appdata/nicotine/incomplete:/data/.local/share/nicotine/incomplete
+      - /home/pi/Appdata/nicotine/received:/data/.local/share/nicotine/received
+      - /home/pi/Appdata/nicotine/shares:/data/shares
     ports:
       - 6080:6080
     restart: unless-stopped
