--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - TZ=America/Chicago
     volumes:
       - /home/pi/Appdata/nicotine/data:/data
-      - /home/pi/Appdata/nicotine/data:/data/.local/share/nicotine/downloads
+      - /home/pi/Appdata/nicotine/data:/downloads/.local/share/nicotine/downloads
       - /home/pi/Appdata/nicotine/incomplete:/data/.local/share/nicotine/incomplete
       - /home/pi/Appdata/nicotine/received:/data/.local/share/nicotine/received
       - /home/pi/Appdata/nicotine/shares:/data/shares
